Remove isCelsius
